# project_oak

./: Cargo.toml  readme.md  specs.md  todo.md
src/: command.rs  error.rs  exe_extender.rs  extra_functions.rs  functions.rs  higher_functions.rs  hlc.rs  main.rs  mlc.rs  oak.rs  path_type.rs  registry_ex.rs  source.rs  steps.rs  tests.rs  vm.rs
src/mlc/: extra_functions.rs  functions.rs  mod.rs
src/vm/: instructions.rs  machine_data.rs  operand.rs
