[package]
name = "project_oak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
reqwest = "0.11.9"
fs_extra = "1.2.0"
threadpool = "1.8.1"
serde =  { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"