[package]
name = "project_oak"
version = "0.1.10"
edition = "2021"
description = "Proof of concept for a action/inverse and step/command based installer and inferred uninstaller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
utfx = "0.1.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
fs_extra = "1.2.0"
serde =  { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
zip-extensions = "0.6.1"
tempfile = "3.3.0"
clap = {version = "3.1.5", features = ["cargo"]}
registry = "1.2.2"
sedregex = "0.2.5"
stack-vm = { version = "1.0.3", git = "https://github.com/ray33ee/stack-vm" }
regex = "1.6.0"
lazy_static = "1.4.0"